feat(tester-application): add pagination in get all application
